--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@ body {
 .hero-section {
     height: 100vh;
     background-size: cover;
-    background-image: url(/TimberStoreWeb/images/bg1.jpeg);
+    background-image: url(/images/bg1.jpeg);
     background-position: center;
     display: flex;
     align-items: center;
