--- a/css/contactus.css
+++ b/css/contactus.css
@@ -1,6 +1,6 @@
 .contact-hero {
     height: 80vh;
-    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/images/bg2.jpeg');
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../images/bg2.jpeg');
     background-size: cover;
     background-position: center;
     display: flex;
