--- a/css/price&services.css
+++ b/css/price&services.css
@@ -64,7 +64,7 @@ body {
 
 .hero-section {
     height: 80vh;
-    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/images/bg2.jpeg');
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../images/bg2.jpeg');
     background-size: cover;
     background-position: center;
     display: flex;
